--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,33 +1,38 @@
 @import "tailwindcss";
 
-@theme inline {
-  /* css vars go here */
-}
-
 :root {
   color-scheme: light;
+  --background: rgb(254, 250, 235);
+  --foreground: #171717;
+}
+
+/* @media (prefers-color-scheme: dark) {
+  :root {
+    --background: #171717;
+    --foreground: #fafaf6;
+  }
+} */
+
+@theme inline {
+  --breakpoint-xs: 25rem;
+  --color-background: var(--background);
+  --color-foreground: var(--foreground);
 }
 
 body {
   @apply min-h-screen overflow-x-hidden antialiased;
+  background-color: var(--background);
+  color: var(--foreground);
 }
 
-a {
-  @apply text-inherit no-underline;
+.button-filled {
+  @apply rounded-full border bg-black text-white px-4 py-2 text-sm font-semibold transition ring-black ring-offset-1 hover:cursor-pointer focus-visible:outline-none focus-visible:ring-2;
 }
 
-.site-shell {
-  @apply flex min-h-screen flex-col;
+.button-border {
+  @apply rounded-full border px-4 py-2 text-sm font-semibold transition hover:cursor-pointer focus-visible:outline-none focus-visible:ring-2;
 }
 
-.site-main {
-  @apply flex-1 flex;
-}
-
-.site-footer {
-  @apply border-t py-12 text-sm backdrop-blur;
-}
-
-.app-container {
-  @apply mx-auto w-full px-6 sm:px-8;
+.button-plain {
+  @apply rounded-full px-4 py-2 text-sm font-semibold transition hover:cursor-pointer focus-visible:outline-none focus-visible:ring-2;
 }
