--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,7 +26,7 @@ body {
 }
 
 .button-filled {
-  @apply rounded-full border bg-black text-white px-4 py-2 text-sm font-semibold transition ring-black ring-offset-1 hover:cursor-pointer focus-visible:outline-none focus-visible:ring-2 disabled:cursor-not-allowed disabled:opacity-60;
+  @apply rounded-full border border-black bg-black text-white px-4 py-2 text-sm font-semibold transition ring-black ring-offset-1 hover:cursor-pointer focus-visible:outline-none focus-visible:ring-2 disabled:cursor-not-allowed disabled:opacity-60;
 }
 
 .button-border {
